--- a/technical_indicators/b_054_1_brsi_tasc201509/b_054_1_brsi_tasc201509.md
+++ b/technical_indicators/b_054_1_brsi_tasc201509/b_054_1_brsi_tasc201509.md
@@ -1,3 +1,10 @@
+---
+layout: default
+title: The Breakout Relative Strength Index (BRSI) by Howard Wang
+parent: Technical Indicators
+nav_order: 54
+---
+
 ## The Breakout Relative Strength Index (BRSI) by Howard Wang
 
 
