--- a/technical_indicators/b_055_1_gfi_tasc202210/b_055_1_gfi_tasc202210.md
+++ b/technical_indicators/b_055_1_gfi_tasc202210/b_055_1_gfi_tasc202210.md
@@ -1,3 +1,10 @@
+---
+layout: default
+title: Measuring Overbought And Oversold: Greed And Fear Index (GFI)
+parent: Technical Indicators
+nav_order: 55
+---
+
 ## Measuring Overbought And Oversold: Greed And Fear Index (GFI)
 
 
