--- a/technical_indicators/b_055_1_gfi_tasc202210/b_055_1_gfi_tasc202210.md
+++ b/technical_indicators/b_055_1_gfi_tasc202210/b_055_1_gfi_tasc202210.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Measuring Overbought And Oversold: Greed And Fear Index (GFI)
+title: Measuring Overbought And Oversold - Greed And Fear Index (GFI)
 parent: Technical Indicators
 nav_order: 55
 ---
