--- a/strategies/c_004_tasc202104/c_004_tasc202104.md
+++ b/strategies/c_004_tasc202104/c_004_tasc202104.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  Detecting High-Volume Breakouts: volume positive negative (VPN)
+title:  Detecting High-Volume Breakouts - volume positive negative (VPN)
 parent: Strategies & Backtests
 nav_order: 4
 ---
