--- a/strategies/c_011_tasc202212/c_011_tasc202212.md
+++ b/strategies/c_011_tasc202212/c_011_tasc202212.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  Short-Term Continuation And Reversal Signals: DMI Continuation Signals and CCI Reversal Signals
+title:  Short-Term Continuation And Reversal Signals - DMI Continuation Signals and CCI Reversal Signals
 parent: Strategies & Backtests
 nav_order: 11
 ---
